# txtratl

./: .clang-format  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
libs/rectpack2d/: CMakeLists.txt
libs/stb/: CMakeLists.txt
src/: CMakeLists.txt  atlas.cpp  atlas.hpp  image.cpp  image.hpp  image_stb.cpp  image_zupply.cpp  imageblit.cpp  imageblit.hpp  imagerect.hpp  main.cpp
tests/: CMakeLists.txt  test_image.cpp
txtratl/: CMakeLists.txt
txtratl/include/txtratl/: atlas.hpp  image.hpp  imageblit.hpp  imagerect.hpp
txtratl/src/: atlas.cpp  image.cpp  image_stb.cpp  imageblit.cpp
